--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js",
-    "test": "jest"
-  },
+  "start": "nodemon server.js",
+  "test": "jest"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
